Fix spacing on Admin filter

--- a/public/css/default.css
+++ b/public/css/default.css
@@ -17,8 +17,18 @@ body {
     padding: 0;
     border: none;
 }
+@media only screen and (max-width: 600px) {
+    #filter > fieldset > h4 {
+        margin: 0;
+    }
+    #filter > fieldset > label {
+        margin: 0.5rem
+    }
+    
+}
 @media only screen and (min-width: 600px) {
     #filter > fieldset {
+        line-height: 1.5rem;
         display: flex;
         align-items: center;
         justify-content: flex-start;
